--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html>lol </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome</title>
+</head>
+<body>
+<a href="public_html/cdko.html">cd</a>
+<a href="public_html/cdko2.html">cd</a>
+</body>
+</html>
