--- a/cd/cdko2.html
+++ b/cd/cdko2.html
@@ -2,8 +2,9 @@
 <head>
     <title data-bind="text: timerTitle"></title>
     <link rel="shortcut icon" type="image/x-icon" href="img/clock.png"/>
-    <script type='text/javascript' src='js/moment.js'></script>
-    <script type='text/javascript' src='js/knockout-debug.js'></script>
+    <script type='text/javascript'
+            src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-debug.js"></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js'></script>
     <style>
         body {
             background-color: #111;
@@ -17,7 +18,7 @@
             transform: translate(-50%, -50%);
         }
 
-        .cdInputs {
+        .cdInput {
             background-color: #222;
             color: #ccc;
             font-size: 2vw;
@@ -29,12 +30,12 @@
     </style>
 </head>
 <body>
-<div class="cdInputs" data-bind="visible: timerInputs, event:{keyup: $root.enterKey}">
-    <input type="text"
+<div data-bind="visible: timerInputs, event:{keyup: $root.enterKey}">
+    <input class="cdInput" type="number"
            data-bind="value: timerInput" placeholder="hours">
-    <input type="text"
+    <input class="cdInput" type="number"
            data-bind="value: timerInput2" placeholder="minutes"><br>
-    <input type="text"
+    <input class="cdInput" type="text"
            data-bind="value: timerMsg" placeholder="message on completion"><br>
 </div>
 <div class="cdDisplay">
