--- a/cd/cdko.html
+++ b/cd/cdko.html
@@ -5,29 +5,7 @@
     <script type='text/javascript'
             src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-debug.js"></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.js'></script>
-    <style>
-        body {
-            background-color: #111;
-            color: #600;
-            font-size: 7vw;
-            font-family: 'courier new', 'sans-serif';
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .cdInput {
-            background-color: #222;
-            color: #ccc;
-            font-size: 2vw;
-        }
-
-        .cdDisplay {
-            text-align: center
-        }
-    </style>
+    <link rel="stylesheet" href="css/cd.css">
 </head>
 <body>
 <div data-bind="visible: timerInputs, event:{keyup: $root.enterKey}">
