--- a/cd/cdko2.html
+++ b/cd/cdko2.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="css/cd.css">
 </head>
 <body>
-<div data-bind="visible: timerInputs, event:{keyup: $root.enterKey}">
+<form data-bind="visible: timerInputs, submit: init">
     <input class="cdInput" type="number"
            data-bind="value: timerInput" placeholder="hours">
     <input class="cdInput" type="number"
            data-bind="value: timerInput2" placeholder="minutes"><br>
     <input class="cdInput" type="text"
            data-bind="value: timerMsg" placeholder="message on completion"><br>
-</div>
+    <button type="submit" style="display: none">go</button>
+</form>
 <div class="cdDisplay">
     <div><span data-bind="text: timerString"></span></div>
     <div style="font-size: 3vw"><span data-bind="text: timerText"></span></div>
