--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="cd/cdko.html">cd</a>
-                        <a class="dropdown-item" href="cd/cdko2.html">cd2</a>
+                        <a class="dropdown-item" href="#">//Item 2</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">//Something else here</a>
                     </div>
