--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         Utilities
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="cd/cdko.html">cd</a>
+                        <a class="dropdown-item" href="cd/cd.html">cd</a>
                         <a class="dropdown-item" href="#">//Item 2</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">//Something else here</a>
