--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <div class="container">
 <div class="col-md-12">
     <h1>Hello there.</h1>
+    <p>This is a web page. It has beans in it.</p>
 </div>
 </div>
 </body>
