--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                     <!--<a class="dropdown-item" href="#">//Something else here</a>-->
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
             <!--<li class="nav-item">-->
                 <!--<a class="nav-link disabled" href="#">//Disabled</a>-->
             <!--</li>-->
@@ -54,10 +57,10 @@
     </div>
 </nav>
 <div class="container">
-<div class="col-md-12">
-    <h1>Hello there.</h1>
-    <p>This is a web page. It has beans in it.</p>
-</div>
+    <div class="col-md-12">
+        <h1>Hello there.</h1>
+        <p>This is a web page. It has beans in it.</p>
+    </div>
 </div>
 </body>
 </html>
