--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<?php include_once "navbar.php"?>
+<div id="nav"></div>
 <div class="container">
     <div class="col-md-12">
         <h1>Hello there.</h1>
         <p>This is a web page. It has beans in it.</p>
     </div>
 </div>
+<script type="text/javascript" src="nav.js"></script>
 </body>
 </html>
