--- a/index.html
+++ b/index.html
@@ -18,13 +18,49 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="nav"></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <span class="navbar-brand">SirKeztrel</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <!--<li class="nav-item active">-->
+            <!--<a class="nav-link" href="#">//Home <span class="sr-only">(current)</span></a>-->
+            <!--</li>-->
+            <!--<li class="nav-item">-->
+            <!--<a class="nav-link" href="#">//Link</a>-->
+            <!--</li>-->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Utilities
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="cd/cd.html">cd</a>
+                    <a class="dropdown-item" href="todo/todo/index.html">todo</a>
+                    <!--<a class="dropdown-item" href="#">//Item 3</a>-->
+                    <!--<div class="dropdown-divider"></div>-->
+                    <!--<a class="dropdown-item" href="#">//Something else here</a>-->
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <!--<li class="nav-item">-->
+            <!--<a class="nav-link disabled" href="#">//Disabled</a>-->
+            <!--</li>-->
+        </ul>
+        <!--<div>send memes</div>-->
+    </div>
+</nav>
 <div class="container">
     <div class="col-md-12">
         <h1>Hello there.</h1>
         <p>This is a web page. It has beans in it.</p>
     </div>
 </div>
-<script type="text/javascript" src="nav.js"></script>
 </body>
 </html>
