--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Utilities
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="cd/cd.html">cd</a>
+                    <a class="dropdown-item" href="#" onclick="s('cd/cd.html')">cd</a>
                     <a class="dropdown-item" href="todo/todo/index.html">todo</a>
                     <!--<a class="dropdown-item" href="#">//Item 3</a>-->
                     <!--<div class="dropdown-divider"></div>-->
@@ -56,11 +56,25 @@
         <!--<div>send memes</div>-->
     </div>
 </nav>
-<div class="container">
-    <div class="col-md-12">
-        <h1>Hello there.</h1>
-        <p>This is a web page. It has beans in it.</p>
+<div id="content">
+    <div class="container">
+        <div class="col-md-12">
+            <h1>Hello there.</h1>
+            <p>This is a web page. It has beans in it.</p>
+        </div>
     </div>
 </div>
+<script>
+    let s = function (s) {
+        let xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState === 4) {
+                document.getElementById('content').innerHTML = this.responseText;
+            }
+        };
+        xhttp.open("GET", s, true);
+        xhttp.send();
+    }
+</script>
 </body>
 </html>
