--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" data-bind="click: function(){vm.nav('about')}" href="#">About</a>
             </li>
             <!--<li class="nav-item">-->
             <!--<a class="nav-link disabled" href="#">//Disabled</a>-->
@@ -58,9 +58,12 @@
         <!--<div>send memes</div>-->
     </div>
 </nav>
-
+<div data-bind="visible: loading" style="text-align: center"><h1>loading...</h1></div>
+<div style="position: absolute; top: 48px; bottom: 5px; right: 0; left: 0;">
+    <iframe id="i" data-bind="visible: nav() !== 'home'" onload="this.style.opacity=1;vm.loading(false)"
+            style="border-width: 0; width: 100%; height: 100%;"></iframe>
+</div>
 <div class="container">
-    <iframe id="i" data-bind="visible: nav() !== 'home'" style="width: 100%; height: 300px;"></iframe>
     <div data-bind="visible: nav() === 'home'" class="container">
         <div class="col-md-12">
             <h1>Hello there.</h1>
@@ -71,14 +74,19 @@
 <script>
     let srcMap = {
             cd: 'cd/cd.html',
-            todo: 'todo/todo/index.html'
+            todo: 'todo/todo/index.html',
+            about: 'about.html'
         },
         VM = function () {
             let self = this;
             self.nav = ko.observable('home');
+            self.loading = ko.observable(false);
             self.doNav = ko.computed(function () {
-                if (srcMap[self.nav()])
+                if (srcMap[self.nav()]) {
+                    self.loading(true);
+                    document.getElementById('i').style.opacity = '0';
                     document.getElementById('i').src = srcMap[self.nav()];
+                }
             });
         },
         vm = new VM();
