--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     </div>
 </nav>
 <div data-bind="visible: loading" style="text-align: center"><h1>loading...</h1></div>
-<div style="position: absolute; top: 48px; bottom: 5px; right: 0; left: 0;">
-    <iframe id="i" data-bind="visible: nav() !== 'home'" onload="this.style.opacity=1;vm.loading(false)"
+<div style="width: 100%; height: calc(100vh - 60px)" data-bind="visible: nav() !== 'home'">
+    <iframe id="i" onload="this.style.opacity=1;typeof vm !== 'undefined' ? vm.loading(false) : null;"
             style="border-width: 0; width: 100%; height: 100%;"></iframe>
 </div>
 <div class="container">
     <div data-bind="visible: nav() === 'home'" class="container">
         <div class="col-md-12">
             <h1>Hello there.</h1>
-            <p>This is a web page. It has beans in it.</p>
+            <p>This is a web page. We live in a society.</p>
         </div>
     </div>
 </div>
