--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome</title>
+    <title>Hello there</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="feelsgoodman1.png"/>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -66,8 +67,29 @@
 <div class="container">
     <div data-bind="visible: nav() === 'home'" class="container">
         <div class="col-md-12">
-            <h1>Hello there.</h1>
-            <p>This is a web page. We live in a society.</p>
+            <h1>Lorem Ipsum</h1>
+            <p>Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. He’s not a
+                word hero. He’s a word hero because he was captured. I like text that wasn’t captured.</p>
+            <p>He’s not a word hero. He’s a word hero because he was captured. I like text that wasn’t captured. Lorem
+                Ipsum is FAKE TEXT! I think the only card she has is the Lorem card. When other websites give you text,
+                they’re not sending the best. They’re not sending you, they’re sending words that have lots of problems
+                and they’re bringing those problems with us. They’re bringing mistakes. They’re bringing misspellings.
+                They’re typists… And some, I assume, are good words.
+            </p>
+            <p>Lorem Ipsum is the single greatest threat. We are not - we are not keeping up with other websites. I
+                think the only difference between me and the other placeholder text is that I’m more honest and my words
+                are more beautiful. He’s not a word hero. He’s a word hero because he was captured. I like text that
+                wasn’t captured. The other thing with Lorem Ipsum is that you have to take out its family.</p>
+
+            <p>My placeholder text, I think, is going to end up being very good with women. Lorem Ipsum is the single
+                greatest threat. We are not - we are not keeping up with other websites. I think my strongest asset
+                maybe by far is my temperament. I have a placeholding temperament.</p>
+
+            <p>You know, it really doesn’t matter what you write as long as you’ve got a young, and beautiful, piece of
+                text. We have so many things that we have to do better... and certainly ipsum is one of them. Despite
+                the constant negative ipsum covfefe. The best taco bowls are made in Trump Tower Grill. I love
+                Hispanics! An ‘extremely credible source’ has called my office and told me that Barack Obama’s
+                placeholder text is a fraud.</p>
         </div>
     </div>
 </div>
