--- a/index.html
+++ b/index.html
@@ -68,28 +68,29 @@
     <div data-bind="visible: nav() === 'home'" class="container">
         <div class="col-md-12">
             <h1>Lorem Ipsum</h1>
-            <p>Trump Ipsum is calling for a total and complete shutdown of Muslim text entering your website. He’s not a
-                word hero. He’s a word hero because he was captured. I like text that wasn’t captured.</p>
-            <p>He’s not a word hero. He’s a word hero because he was captured. I like text that wasn’t captured. Lorem
-                Ipsum is FAKE TEXT! I think the only card she has is the Lorem card. When other websites give you text,
-                they’re not sending the best. They’re not sending you, they’re sending words that have lots of problems
-                and they’re bringing those problems with us. They’re bringing mistakes. They’re bringing misspellings.
-                They’re typists… And some, I assume, are good words.
+            <p>Lorem Ispum is a choke artist. It chokes! I will write some great placeholder text – and nobody writes
+                better placeholder text than me, believe me – and I’ll write it very inexpensively. I will write some
+                great, great text on your website’s Southern border, and I will make Google pay for that text. Mark my
+                words.
             </p>
-            <p>Lorem Ipsum is the single greatest threat. We are not - we are not keeping up with other websites. I
-                think the only difference between me and the other placeholder text is that I’m more honest and my words
-                are more beautiful. He’s not a word hero. He’s a word hero because he was captured. I like text that
-                wasn’t captured. The other thing with Lorem Ipsum is that you have to take out its family.</p>
-
-            <p>My placeholder text, I think, is going to end up being very good with women. Lorem Ipsum is the single
-                greatest threat. We are not - we are not keeping up with other websites. I think my strongest asset
-                maybe by far is my temperament. I have a placeholding temperament.</p>
-
-            <p>You know, it really doesn’t matter what you write as long as you’ve got a young, and beautiful, piece of
-                text. We have so many things that we have to do better... and certainly ipsum is one of them. Despite
-                the constant negative ipsum covfefe. The best taco bowls are made in Trump Tower Grill. I love
-                Hispanics! An ‘extremely credible source’ has called my office and told me that Barack Obama’s
-                placeholder text is a fraud.</p>
+            <p>I think the only card she has is the Lorem card. My text is long and beautiful, as, it has been well
+                documented, are various other parts of my website.
+            </p>
+            <p>I was going to say something extremely rough to Lorem Ipsum, to its family, and I said to myself, "I
+                can't do it. I just can't do it. It's inappropriate. It's not nice." Trump Ipsum is calling for a total
+                and complete shutdown of Muslim text entering your website. I think the only difference between me and
+                the other placeholder text is that I’m more honest and my words are more beautiful.
+            </p>
+            <p>We have so many things that we have to do better... and certainly ipsum is one of them.
+            </p>
+            <p>When other websites give you text, they’re not sending the best. They’re not sending you, they’re
+                sending words that have lots of problems and they’re bringing those problems with us. They’re bringing
+                mistakes. They’re bringing misspellings. They’re typists… And some, I assume, are good words. An
+                'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a
+                fraud. The concept of Lorem Ipsum was created by and for the Chinese in order to make U.S. design jobs
+                non-competitive. My text is long and beautiful, as, it has been well documented, are various other parts
+                of my website. I know words. I have the best words.
+            </p>
         </div>
     </div>
 </div>
